objects/Customer_Portal_Branding__c.object
<CustomObject>
    <fields>
        <fullName>Application_Body_Header__c</fullName>
        <defaultValue>&quot;474747&quot;</defaultValue>
        <inlineHelpText>This changes the text color inside the body of the application. 
&quot;Let&apos;s Determine Your Eligibility&quot;</inlineHelpText>
        <label>Application Body Header (Light Blue)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundId__c</fullName>
        <inlineHelpText>This changes the Image in customer portal that displays behind the welcome text.</inlineHelpText>
        <label>Customer Portal Hero Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Color__c</fullName>
        <defaultValue>&quot;c94c06&quot;</defaultValue>
        <inlineHelpText>This changes the Main button color you see while navigating through the application and customer portal.</inlineHelpText>
        <label>Primary Button Color (Purple)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Header_Background_Color__c</fullName>
        <defaultValue>&quot;#003b71&quot;</defaultValue>
        <inlineHelpText>This changes the background color for the header of things like the marketplace product headers, your to-do items header, etc.</inlineHelpText>
        <label>Card Header Background Color (Orange)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Header_Text_Color__c</fullName>
        <inlineHelpText>This changes the color of the text on things like marketplace and your to-do items headers.</inlineHelpText>
        <label>Card Header Text Color (Red)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Link_Text__c</fullName>
        <defaultValue>&quot;333333&quot;</defaultValue>
        <inlineHelpText>This changes the color of the text for links for Dashboard, Accounts, Marketplace and Username in the topbar in customer portal</inlineHelpText>
        <label>Dashboard Link Text (Yellow)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Topbar_Header__c</fullName>
        <inlineHelpText>Changes the main header on the Customer Portal Dashboard.</inlineHelpText>
        <label>Dashboard Topbar Header (Green)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Color__c</fullName>
        <defaultValue>&quot;c94c06&quot;</defaultValue>
        <inlineHelpText>This changes the color of all the icons in portal and online application, including the main application section and tiles.</inlineHelpText>
        <label>Icon Color (Red)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation_Bar_Color__c</fullName>
        <defaultValue>&quot;003b71&quot;</defaultValue>
        <inlineHelpText>This Changes the Color for the Navigation Dots and Bar whenever the stage is active.</inlineHelpText>
        <label>Navigation Bar Color (Green)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation_Text_Color__c</fullName>
        <defaultValue>&quot;003b71&quot;</defaultValue>
        <inlineHelpText>Changes the text color for stages in the navigation.</inlineHelpText>
        <label>Navigation Text Color (Green)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Application_Hero_Image__c</fullName>
        <inlineHelpText>This changes the image that sits at the top of all online application screens.</inlineHelpText>
        <label>Online Application Hero Image</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Application_Topbar_Header_Text__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <inlineHelpText>This changes the main header text color on all online application screens.</inlineHelpText>
        <label>Online Application Topbar Text (Yellow)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Button_Color__c</fullName>
        <inlineHelpText>This changes the color of the secondary button (if a section has a second button on it). 
&quot;Apply with this business&quot; Button on Your Business Route.</inlineHelpText>
        <label>Secondary Button Color (Blue)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tile_Header_Text__c</fullName>
        <defaultValue>&quot;#474747&quot;</defaultValue>
        <inlineHelpText>This changes the header text for Tiles (FAQs, Loan Team, Need Help) in customer portal and online application</inlineHelpText>
        <label>Tile Header Text (Green)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Customer Portal Branding</label>
    <nameField>
        <label>Customer Portal Branding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Portal Branding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>